# structureGAT

./: README.md
DDG/: Makefile
SLO/DDG/: ddg.py
SLO/DDG/DDG/: CMakeLists.txt
SLO/structureGAT/data/blackscholes_test/raw/: blackscholes_test_edge_labels.txt  blackscholes_test_graph_attributes.txt  blackscholes_test_graph_indicator.txt  blackscholes_test_node_labels.txt
SLO/structureGAT/data/blackscholes_train/raw/: blackscholes_train_A.txt  blackscholes_train_edge_labels.txt  blackscholes_train_graph_attributes.txt
SLO/structureGAT/data/libquantum_test/raw/: libquantum_test_A.txt  libquantum_test_edge_labels.txt  libquantum_test_graph_attributes.txt  (+2 more)
SLO/structureGAT/readData/: myDataset.py  read_spec_data.py
structureGAT/data/blackscholes_test/processed/: data.pt
structureGAT/data/blackscholes_test/raw/: blackscholes_test_A.txt  blackscholes_test_edge_labels.txt  blackscholes_test_node_labels.txt
structureGAT/data/blackscholes_train/processed/: data.pt
structureGAT/data/blackscholes_train/raw/: blackscholes_train_edge_labels.txt
structureGAT/data/libquantum_test/processed/: data.pt
structureGAT/data/libquantum_test/raw/: libquantum_test_A.txt  libquantum_test_edge_labels.txt  libquantum_test_node_labels.txt
structureGAT/data/libquantum_train/raw/: libquantum_train_A.txt  libquantum_train_edge_labels.txt  libquantum_train_node_labels.txt
structureGAT/data/lud_test/raw/: lud_test_A.txt  lud_test_node_labels.txt
structureGAT/data/lud_train/raw/: lud_train_edge_labels.txt
structureGAT/readData/: myDataset.py  read_spec_data.py
(+14 files in other folders)
